RESOLVED FIXED137092
[SVG -> OTF Converter] Arabic forms are not substituted correctly
https://bugs.webkit.org/show_bug.cgi?id=137092
Summary [SVG -> OTF Converter] Arabic forms are not substituted correctly
Myles C. Maxfield
Reported 2014-09-24 17:21:04 PDT
The following tests fail because of this (when the SVG -> OTF converter is turned on): svg/W3C-SVG-1.1/fonts-glyph-02-t.svg svg/custom/glyph-selection-arabic-forms.svg
Attachments
Patch depends on https://bugs.webkit.org/show_bug.cgi?id=137097 (10.64 KB, patch)
2014-09-28 14:07 PDT, Myles C. Maxfield
no flags
Patch (9.83 KB, patch)
2014-10-03 13:58 PDT, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2014-09-28 14:07:58 PDT
Myles C. Maxfield
Comment 2 2014-10-03 13:58:29 PDT
WebKit Commit Bot
Comment 3 2014-10-04 23:34:09 PDT
Comment on attachment 239229 [details] Patch Clearing flags on attachment: 239229 Committed r174325: <http://trac.webkit.org/changeset/174325>
WebKit Commit Bot
Comment 4 2014-10-04 23:34:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.